[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "santa is coming"
authors = ["Alexander Rymdeko-Harvey <a.rymdekoharvey@obscuritylabs.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
